# qiandaobot-rs

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml  makefile  requirements.txt
.github/workflows/: build.yml  docker.yml  release.yml
crates/entity/: Cargo.toml
crates/entity/src/: message.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20240117_183000_create_table.rs
crates/qiandaobot/: Cargo.toml
crates/qiandaobot/src/: db.rs  main.rs
crates/qiandaobot/src/bot/: client.rs  command.rs  handlers.rs  mod.rs  run.rs
crates/qiandaobot/src/libs/: env.rs
docker/qiandaobot/: Dockerfile
scripts/: import.py
