[package]
name = "qiandaobot-entity"
version = "0.1.0"
edition = "2021"

[lib]
name = "entity"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "sqlx-sqlite", "macros"] }
